--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient( rgb(255, 255, 255), #85c3f9);
+    background-color: white;
     font-family: "Open Sans";
     margin: 0px;
 }
@@ -22,7 +22,10 @@ p{
 .navbar{
     font-family: "Open Sans";
     width: 90%;
-    margin: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
     padding: 0px;
     display: flex;
     align-items: center;
@@ -63,6 +66,7 @@ p{
     border-radius: 15px;
     overflow: hidden;
     height: 300px;
+    margin-top: 90px;
 }
 
 .bannerimg{
@@ -80,14 +84,17 @@ p{
     float: center;
     max-width: 900px;
     color: #414547;
-    margin: 40px auto 0px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 69px;
+    margin-bottom: 69px;
     font-family: "Open Sans";
     line-height: 1.6;
     padding: 0 20px;
 }
 
 footer{
-    background-color: #7aafff;
+    background-image: linear-gradient( to bottom, #75b3ff, #b8deff);;
     padding: 30px;
     text-align: center;
     text-decoration: none;
@@ -110,10 +117,11 @@ footer a:hover{
 .gallery{
     text-align: center;
     display: inline-block;
-    margin-left: 110px;
-    margin-right: 110px;
-    margin-top: 110px;
-    margin-bottom: 110px;
+    margin-top: 90px;
+    margin-bottom: 150px;
+    margin-left: 250px;
+    margin-right: 250px;
+
 }
 
 .gallery .description{
@@ -124,7 +132,7 @@ footer a:hover{
 
 .gallery .description a{
     text-align: center;
-    color: black;
+    color: #414547;
     text-decoration: none;
 }
 .gallery .description p{
@@ -141,6 +149,23 @@ footer a:hover{
 }
 
 .gallery img{
+    transition: 0.8s;
     border-radius: 15px;
     width: 400px;
 }
+
+.gallery img:hover{
+    transform: scale(1.1);
+    z-index: 2;
+    transition: 0.8s;
+}
+
+.fa-brands:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
+} 
+
+.fa-brands{
+    transform: scale(1);
+    transition: 0.5s;
+} 
