--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body{
 }
 
 p{
-    font-family: "Open Sans";
     text-align: center;
     margin: auto;
 
@@ -120,10 +119,19 @@ footer a:hover{
     display: inline-block;
     margin-top: 90px;
     margin-bottom: 150px;
-    margin-left: 250px;
-    margin-right: 250px;
+    margin-left: 150px;
+    margin-right: 150px;
 
 }
+
+@media screen and (max-width: 767px) {
+    .gallery {
+        margin-top: 90px;
+        margin-bottom: 90px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+  }
 
 .gallery .description{
     padding: 15px;
