--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ p{
 }
 
 footer{
-    background-image: linear-gradient( to bottom, #75b3ff, #b8deff);;
+    background-image: linear-gradient( to bottom, #7a7a7a, #dddddd);;
     padding: 30px;
     text-align: center;
     text-decoration: none;
