--- a/style.css
+++ b/style.css
@@ -63,9 +63,7 @@ p{
     position: relative;
     text-align: center;
     color: white;
-    border-radius: 35px;
     overflow: hidden;
-    height: 300px;
     margin-bottom: 90px;
     margin-left: auto;
     margin-right: auto;
@@ -73,9 +71,17 @@ p{
 }
 
 .bannerimg{
+    border-radius: 35px;
     height: 300px;
     width: 60%;
-    border-radius: 15px;
+}
+
+@media screen and (max-width: 767px) {
+    .bannerimg {
+        border-radius: 35px;
+        width: 90%;
+        height: 200px;
+    }
 }
 
 .centered {
