--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ p{
     text-align: center;
     color: white;
     overflow: hidden;
+    height: 300px;
     margin-bottom: 90px;
     margin-left: auto;
     margin-right: auto;
@@ -82,7 +83,7 @@ p{
         width: 90%;
         height: 200px;
     }
-}
+  }
 
 .centered {
     position: absolute;
@@ -105,7 +106,7 @@ p{
 }
 
 footer{
-    background-image: linear-gradient( to bottom, #7a7a7a, #dddddd);;
+    background-image: linear-gradient( to bottom, #5ba2ff, #f7f7f7);;
     padding: 30px;
     text-align: center;
     text-decoration: none;
@@ -130,8 +131,8 @@ footer a:hover{
     display: inline-block;
     margin-top: 90px;
     margin-bottom: 150px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 84px;
+    margin-right: 84px;
 
 }
 
@@ -189,3 +190,57 @@ footer a:hover{
     transform: scale(1);
     transition: 0.5s;
 } 
+
+.container{
+    padding: 2rem;
+}
+
+.slider-wrapper{
+    position: relative;
+    max-width: 62rem;
+    margin: 50px auto;
+
+}
+
+.slider{
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem black;
+    border-radius: 35px;
+}
+
+.slider img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+   width: 1.5rem;
+   height: 1.5rem;
+   border-radius: 50%;
+   background-color: #fff;
+   opacity: 0.75;
+   transition: opacity ease 250ms; 
+}
+
+.slider-nav a:hover{
+    opacity: 1;
+}
+
+.slider::-webkit-scrollbar {
+    display: none;
+  }
