--- a/style.css
+++ b/style.css
@@ -126,14 +126,18 @@ footer a:hover{
     text-decoration: underline;
 }
 
-.gallery{
-    text-align: center;
-    display: inline-block;
-    margin-top: 90px;
-    margin-bottom: 150px;
-    margin-left: 84px;
-    margin-right: 84px;
 
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5rem; /* Adjust this if you want more/less space between items */
+    margin: 90px auto;
+}
+
+.image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media screen and (max-width: 767px) {
@@ -145,37 +149,38 @@ footer a:hover{
     }
   }
 
-.gallery .description{
+.image-container .description{
     padding: 15px;
     text-align: center;
 }
 
+.image-container img{
+    transition: 0.8s;
+    border-radius: 15px;
+    width: 400px;
+}
 
-.gallery .description a{
+.image-container .description a{
+    transition: 0.3s;
     text-align: center;
     color: #414547;
     text-decoration: none;
 }
-.gallery .description p{
-    max-width: 400px;
+
+.image-container .description p{
+     max-width: 400px;
     padding: 15px;
     text-align: center;
     color: black;
     text-decoration: none;
 }
 
-.gallery .description a:hover{
+.image-container .description a:hover{
     color: red;
-    text-decoration: none;
+    transition: 0.3s;
 }
 
-.gallery img{
-    transition: 0.8s;
-    border-radius: 15px;
-    width: 400px;
-}
-
-.gallery img:hover{
+.image-container img:hover{
     transform: scale(1.1);
     z-index: 2;
     transition: 0.8s;
@@ -199,7 +204,7 @@ footer a:hover{
     position: relative;
     max-width: 62rem;
     margin: 50px auto;
-
+    padding: 40px;
 }
 
 .slider{
@@ -213,25 +218,27 @@ footer a:hover{
 }
 
 .slider img{
+    position: relative;
     flex: 1 0 100%;
     scroll-snap-align: start;
     object-fit: cover;
 }
 
 .slider-nav{
+    z-index: 15;
     display: flex;
     column-gap: 1rem;
     position: absolute;
     bottom: 1.25rem;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1;
 }
 
 .slider-nav a{
-   width: 1.5rem;
+    z-index: 15;
+   width: 4rem;
    height: 1.5rem;
-   border-radius: 50%;
+   border-radius: 35px;
    background-color: #fff;
    opacity: 0.75;
    transition: opacity ease 250ms; 
@@ -241,6 +248,38 @@ footer a:hover{
     opacity: 1;
 }
 
+.slide {
+    position: relative;
+    display: flex;
+    flex: 1 0 100%;
+    z-index: 10;
+}
+
+.slide img {
+    position: relative;
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slide-title {
+    z-index: 10;
+    position: absolute;
+    top: 45%;
+    left: 30%;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.slide-title a{
+    text-decoration: none;
+    font-size: 48px;
+    color: white;
+}
+
+
 .slider::-webkit-scrollbar {
     display: none;
-  }
+}
