--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ footer a:hover{
 
 .slider-wrapper{
     position: relative;
-    max-width: 62rem;
+    max-width: 82rem;
     margin: 50px auto;
     padding: 40px;
 }
@@ -291,6 +291,22 @@ footer a:hover{
 @media screen and (max-width: 768px) {
     .slide-title a {
         font-size: 24px; /* Reduce font size for mobile */
+    }
+    .slider{
+        display: flex;
+        aspect-ratio: 16 / 9;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        scroll-behavior: smooth;
+        box-shadow: 0 1.5rem 3rem -0.75rem black;
+        border-radius: 0px;
+    }
+    .slider-wrapper{
+        position: relative;
+        max-width: 100%;
+        height: 42rem;
+        margin: 50px auto;
+        padding: 40px;
     }
     .slider-wrapper {
         padding: 20px; /* Reduce padding for mobile */
