--- a/style.css
+++ b/style.css
@@ -305,7 +305,10 @@ footer a:hover{
         position: relative;
         max-width: 100%;
         height: 42rem;
-        margin: 50px auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 40px;
+        margin-bottom: 45px;
         padding: 40px;
     }
     .slider-wrapper {
