--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ footer a:hover{
 
 @media screen and (max-width: 767px) {
     .gallery {
+        display: inline-block;
         margin-top: 90px;
         margin-bottom: 90px;
         margin-left: auto;
@@ -303,7 +304,7 @@ footer a:hover{
     }
     .slider-wrapper{
         position: relative;
-        max-width: 100%;
+        width: 100%;
         height: 42rem;
         margin-left: auto;
         margin-right: auto;
