--- a/style.css
+++ b/style.css
@@ -299,20 +299,32 @@ footer a:hover{
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
-        box-shadow: 0 1.5rem 3rem -0.75rem black;
         border-radius: 0px;
     }
     .slider-wrapper{
         position: relative;
         width: 100%;
         height: 42rem;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 0px;
+        margin-right: 0px;
         margin-top: 40px;
         margin-bottom: 45px;
-        padding: 40px;
+        padding: 20px;
     }
-    .slider-wrapper {
-        padding: 20px; /* Reduce padding for mobile */
+
+    .slide {
+        position: relative;
+        display: flex;
+        flex: 1 0 100%;
+        z-index: 10;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .slide img {
+        position: relative;
+        flex: 1 0 100%;
+        scroll-snap-align: start;
+        object-fit: cover;
     }
 }
