--- a/style.css
+++ b/style.css
@@ -1,337 +1,148 @@
-body{
-    background-color: white;
-    font-family: "Open Sans";
-    margin: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body
+{
+    background-color: rgb(63, 63, 63);
+    font-family: "Fira Sans", sans-serif;
 }
 
-p{
-    text-align: center;
-    margin: auto;
-
+li, a, button
+{
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    color:rgb(255, 255, 255);
+    text-decoration: none;
 }
 
-.banner{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
-    margin: auto;
-    font-family: "Open Sans";
-
-}
-
-.navbar{
-    font-family: "Open Sans";
-    width: 90%;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    padding: 0px;
+header
+{
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(63, 63, 63));
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    padding: 30px 5%;
 }
 
 .logo{
-    width:275px;
+    width: 128px;
     cursor: pointer;
 }
 
-.navbar ul{
-    list-style-type: none;
-    padding:0px
-}
-
-.navbar a{
-    color: black;
-    text-decoration: none;
-    padding:25px;
-    display: block;
-    text-align: center;
-}
-
-.navbar a:hover{
-    color: rgb(252, 10, 10);
-    text-decoration: dashed;
+.navbar{
+    list-style: none;
 }
 
 .navbar li{
-    float:left;
+    display: inline-block;
+    padding: 0px 20px;
 }
 
-.aboutus{
-    position: relative;
-    text-align: center;
+.navbar li a{
+    color:rgb(255, 255, 255);
+    transition: all 0.3 ease 0s;
+}
+
+.navbar li a:hover{
+    transition: all 0.3 ease 0s;
+    color:rgb(111, 111, 111);
+}
+
+.nav_button {
+    cursor: pointer;
+    transition: 0.4s;
+    border-radius: 50px;
+    border: none;
+    background-color: black;
+    padding: 10px 25px;
+}
+
+.nav_button:hover{
+    transition: 0.4s;
+    background-color: rgb(111, 111, 111);
+}
+
+.nav_button a{
     color: white;
-    overflow: hidden;
-    height: 300px;
-    margin-bottom: 90px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 90px;
 }
 
-.bannerimg{
-    border-radius: 35px;
-    height: 300px;
-    width: 60%;
-}
-
-@media screen and (max-width: 767px) {
-    .bannerimg {
-        border-radius: 35px;
-        width: 90%;
-        height: 200px;
-    }
-  }
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.bio{
-    float: center;
-    max-width: 900px;
-    color: #414547;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 69px;
-    margin-bottom: 69px;
-    font-family: "Open Sans";
-    line-height: 1.6;
-    padding: 0 20px;
+.title{
+    color: white;
+    font-family: "Fira Sans", sans-serif;
+    text-align: center;
+    padding: 69px 15px;
 }
 
 footer{
-    background-image: linear-gradient( to bottom, #717171, #d3d3d3);;
-    padding: 30px;
+    padding: 20px;
+    height: 100%;
     text-align: center;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
+    background-image: linear-gradient( rgb(63, 63, 63), rgb(0, 0, 0));
 }
 
-footer a{
+.footer_text{
     padding: 15px;
-    font-family: "Open Sans";
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-}
-
-footer a:hover{
-    font-family: "Open Sans";
-    color: red;
-    text-decoration: underline;
-}
-
-
-.gallery{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5rem; /* Adjust this if you want more/less space between items */
-    margin: 90px auto;
-}
-
-.image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-@media screen and (max-width: 767px) {
-    .gallery {
-        display: inline-block;
-        margin-top: 90px;
-        margin-bottom: 90px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-  }
-
-.image-container .description{
-    padding: 15px;
+    font-weight: 500;
+    font-size: 25px;
     text-align: center;
-}
-
-.image-container img{
-    transition: 0.8s;
-    border-radius: 15px;
-    width: 400px;
-}
-
-.image-container .description a{
-    transition: 0.3s;
-    text-align: center;
-    color: #414547;
-    text-decoration: none;
-}
-
-.image-container .description p{
-     max-width: 400px;
-    padding: 15px;
-    text-align: center;
-    color: black;
-    text-decoration: none;
-}
-
-.image-container .description a:hover{
-    color: red;
-    transition: 0.3s;
-}
-
-.image-container img:hover{
-    transform: scale(1.1);
-    z-index: 2;
-    transition: 0.8s;
-}
-
-.fa-brands:hover{
-    transform: scale(1.2);
-    transition: 0.5s;
-} 
-
-.fa-brands{
-    transform: scale(1);
-    transition: 0.5s;
-} 
-
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-}
-
-.slider-wrapper{
-    position: relative;
-    max-width: 82rem;
-    margin: 50px auto;
-    padding: 40px;
-}
-
-.slider{
-    display: flex;
-    aspect-ratio: 16 / 9;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    box-shadow: 0 1.5rem 3rem -0.75rem black;
-    border-radius: 35px;
-}
-
-.slider img{
-    position: relative;
-    width: 100%;
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
-}
-
-.slider-nav{
-    z-index: 15;
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    bottom: 1.25rem;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.slider-nav a{
-    z-index: 15;
-   width: 4rem;
-   height: 1.5rem;
-   border-radius: 35px;
-   background-color: #fff;
-   opacity: 0.75;
-   transition: opacity ease 250ms; 
-}
-
-.slider-nav a:hover{
-    opacity: 1;
-}
-
-.slide {
-    aspect-ratio: 16/9;
-    position: relative;
-    display: flex;
-    flex: 1 0 100%;
-    z-index: 10;
-    object-fit: cover;
-}
-
-.slide img {
-    align-items: center;
-    position: relative;
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
-}
-
-.slide-title {
-    z-index: 10;
-    position: absolute;
-    top: 45%;
-    margin-left: 40%;
-    margin-right: 40%;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 5px 10px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.slide-title a{
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 48px;
+    font-family: "Fira Sans", sans-serif;
     color: white;
 }
 
-
-.slider::-webkit-scrollbar {
-    display: none;
+.fa-brands{
+    margin: 10px;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    padding: 15px 25px;
+    transition: 0.3s;
+    transform: scale(1);
+    rotate: 0deg;
 }
 
-@media screen and (max-width: 768px) {
-    .slide-title a {
-        font-size: 24px; /* Reduce font size for mobile */
-    }
-    .slider{
-        display: flex;
-        aspect-ratio: 16 / 9;
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
-        border-radius: 0px;
-    }
-    .slider-wrapper{
-        position: relative;
-        width: 100%;
-        height: 42rem;
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 40px;
-        margin-bottom: 45px;
-        padding: 20px;
-    }
+.fa-brands:hover{
+    color: rgb(0, 19, 82);
+    transition: 0.3s;
+    transform: scale(1.5);
+    rotate: -8deg;
+}
 
-    .slide {
-        position: relative;
-        display: flex;
-        flex: 1 0 100%;
-        z-index: 10;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .slide img {
-        position: relative;
-        flex: 1 0 100%;
-        scroll-snap-align: start;
-        object-fit: cover;
-    }
+#discord:hover{
+    color: #5865F2;
+}
+
+#twitter:hover{
+    color: #7eb3cd;
+}
+
+#instagram:hover{
+    color: #C13584;
+}
+
+#youtube:hover{
+    color: #FF0000;
+}
+
+
+.title{
+    font-size: 69px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.text{
+    padding: 25px;
+    margin: 100px 10px;
+    text-align: center;
+    color: white;
+    font-weight: 500;
+    font-size: 25px;
+}
+
+.second_card{
+    background-image: linear-gradient(rgba(76, 76, 76, 0.95), rgba(62, 62, 62, 0.95));;
 }
