--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(18, 0, 51);
     font-family: "Fira Sans", sans-serif;
 }
 
@@ -22,7 +22,7 @@ li, a, button
 
 header
 {
-    background-image: linear-gradient(rgb(0, 0, 0), rgb(63, 63, 63));
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(18, 0, 51));
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,11 +54,13 @@ header
 }
 
 .nav_button {
+    border-width: 5px;
+    border-color: rgb(26, 26, 26);
     cursor: pointer;
     transition: 0.4s;
     border-radius: 50px;
     border: none;
-    background-color: black;
+    background-color: rgb(17, 17, 17);
     padding: 10px 25px;
 }
 
@@ -82,7 +84,7 @@ footer{
     padding: 20px;
     height: 100%;
     text-align: center;
-    background-image: linear-gradient( rgb(63, 63, 63), rgb(0, 0, 0));
+    background-image: linear-gradient( rgb(18, 0, 51), rgb(0, 0, 0));
 }
 
 .footer_text{
@@ -129,6 +131,7 @@ footer{
 
 
 .title{
+    text-shadow: #000000;
     font-size: 69px;
     font-weight: 500;
     text-align: center;
@@ -136,13 +139,32 @@ footer{
 
 .text{
     padding: 25px;
-    margin: 100px 10px;
     text-align: center;
     color: white;
     font-weight: 500;
     font-size: 25px;
 }
 
-.second_card{
-    background-image: linear-gradient(rgba(76, 76, 76, 0.95), rgba(62, 62, 62, 0.95));;
+.text_about{
+    padding: 25px;
+    border-radius: 25px;
+    margin: 0px 25px;
+    background-image: linear-gradient( rgb(5, 0, 12, 0.7), rgb(0, 0, 0, 0.7));
+}
+
+#about_header{
+    background-image: linear-gradient( rgb(0, 0, 0), rgb(18, 0, 51));
+}
+
+#about_footer{
+    background-image: linear-gradient(  rgb(53, 0, 154), rgb(6, 0, 16));
+}
+
+.about_background{
+    background-image: url(Images/AboutUsBG.png);
+    background-repeat: repeat-x;
+}
+
+#hehe{
+    height: 800px;
 }
